
    HADOOP-9093. Move all the Exception in PathExceptions to o.a.h.fs package.
    (suresh)

    HADOOP-9127. Update documentation for ZooKeeper Failover Controller.
    (Daisuke Kobayashi via atm)

    HADOOP-9004. Allow security unit tests to use external KDC. (Stephen Chu
    via suresh)

    HADOOP-9147. Add missing fields to FIleStatus.toString.
    (Jonathan Allen via suresh)

  OPTIMIZATIONS

    HADOOP-8866. SampleQuantiles#query is O(N^2) instead of O(N). (Andrew Wang
    via atm)

    HADOOP-8926. hadoop.util.PureJavaCrc32 cache hit-ratio is low for static
    data (Gopal V via bobby)

    HADOOP-9042. Add a test for umask in FileSystemContractBaseTest.
    (Colin McCabe via eli)

  BUG FIXES

    HADOOP-9041. FsUrlStreamHandlerFactory could cause an infinite loop in
    FileSystem initialization. (Yanbo Liang and Radim Kolar via llu)

    HADOOP-8418. Update UGI Principal classes name for running with
    IBM JDK on 64 bits Windows.  (Yu Gao via eyang)

    HADOOP-8795. BASH tab completion doesn't look in PATH, assumes path to
    executable is specified. (Sean Mackrory via atm)

    HADOOP-8780. Update DeprecatedProperties apt file. (Ahmed Radwan via
    tomwhite)

    HADOOP-8833. fs -text should make sure to call inputstream.seek(0)
    before using input stream. (tomwhite and harsh)

    HADOOP-8791. Fix rm command documentation to indicte it deletes
    files and not directories. (Jing Zhao via suresh)

    HADOOP-8855. SSL-based image transfer does not work when Kerberos
    is disabled. (todd via eli)

    HADOOP-8616. ViewFS configuration requires a trailing slash. (Sandy Ryza
    via atm)

    HADOOP-8756. Fix SEGV when libsnappy is in java.library.path but
    not LD_LIBRARY_PATH. (Colin Patrick McCabe via eli)

    HADOOP-8881. FileBasedKeyStoresFactory initialization logging should be debug not info. (tucu)

    HADOOP-8913. hadoop-metrics2.properties should give units in comment 
    for sampling period. (Sandy Ryza via suresh)
